--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "@oclif/core": "^4",
     "@salesforce/core": "^8",
     "@salesforce/sf-plugins-core": "^12",
-    "got": "^14.4.6"
+    "got": "^14.4.6",
+    "xlsx": "^0.18.5",
+    "xlsx-style": "^0.8.13"
   },
   "devDependencies": {
     "@oclif/plugin-command-snapshot": "^5.1.9",
     "@salesforce/cli-plugins-testkit": "^5.3.10",
     "@salesforce/dev-scripts": "^10",
+    "@types/xlsx": "^0.0.35",
     "eslint-plugin-sf-plugin": "^1.18.6",
     "oclif": "^4.14.0",
     "ts-node": "^10.9.2",
@@ -54,6 +57,9 @@
             "description": "description for call.external"
           }
         }
+      },
+      "jz": {
+        "description": "description for jz"
       }
     },
     "flexibleTaxonomy": true
