--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/pdfkit": "^0.14.0",
     "got": "^14.4.6",
     "pdfkit": "^0.17.1",
+    "puppeteer": "^22.0.0",
     "xlsx": "^0.18.5",
     "xlsx-style": "^0.8.13"
   },
